sass/index.scss
/* ... */
#header-container {
	--shift: 0.1875rem;
	display: block;
	transition: var(--transition-longer);
	margin: 2rem 0 1rem;
	width: min(31.0625rem, 100%);

	&:hover {
		// Dashie!
		transform: translate(
			calc(var(--shift) * 3),
			calc(calc(var(--shift) * -1) * 3)
		);
		filter: drop-shadow(calc(var(--shift) * -1) var(--shift) 0 #1b98d1)
			drop-shadow(calc(var(--shift) * -1) var(--shift) 0 #fde85f)
			drop-shadow(calc(var(--shift) * -1) var(--shift) 0 #ec4141);

		#header {
			background-color: #9bdbf5;
		}
	}

	&:active {
		// 20% cooler
		transform: translate(
			calc(calc(var(--shift) * -1) * 3),
			calc(calc(var(--shift) * -1) * 3)
		);
		filter: drop-shadow(var(--shift) var(--shift) 0 #1b98d1)
			drop-shadow(var(--shift) var(--shift) 0 #fde85f)
			drop-shadow(var(--shift) var(--shift) 0 #ec4141);
	}

	#header {
		--mask: url("assets/header.png");
		-webkit-mask-size: cover;
		-webkit-mask-image: var(--mask);
		-webkit-user-select: none;
		mask-image: var(--mask);
		mask-size: contain;
		transition: var(--transition-longer);
		margin: 0;
		background-color: var(--primary-color);
		aspect-ratio: 4.4 / 1; // Proper height regardless of the width
		width: 100%;
		overflow: hidden; // Make aspect ratio set above work
		color: transparent;
		user-select: none;

		@media (prefers-reduced-motion) {
			--mask: url("assets/header-static.png");
			-webkit-mask-image: var(--mask);
			mask-image: var(--mask);
		}
	}

	@media only screen and (max-width: 758px) {
		margin: 2rem auto 1rem;
	}
}

// It's not an accurate polaroid please don't kill me
#polaroid {
	display: block;
	position: relative;
	float: inline-end;
	transform: perspective(32rem) rotate(5deg) rotateX(5deg);
	transform-origin: 50% 1rem;
	transition: var(--transition-longer);
	margin-inline-start: 1.5rem;
	margin-block-start: 2rem;
	box-shadow: var(--shadow-raised);
	// I know that polaroids have knife-sharp corners,
	// that's only to make sure shine gets clipped in Firefox
	border-radius: var(--rounded-corner-small);
	background-color: white;
	padding: 0.5rem;
	width: 10rem;
	overflow: hidden;

	&::after {
		-webkit-pointer-events: none;
		display: block;
		position: absolute;
		top: 0.25rem;
		left: calc(50% - 0.7813rem);
		// Dirty hack to avoid transformation of the thumbtack
		transform: perspective(32rem) rotate(-5deg) rotateX(-5deg);
		z-index: 1;
		transition: var(--transition);
		background-image: url("assets/thumbtack.png");
		background-size: cover;
		width: 1.5625rem;
		height: 1.1875rem;
		pointer-events: none;
		content: "";
	}

	&:hover {
		transform: none;
		box-shadow: var(--shadow);

		&::after {
			transform: none;
		}

		#polaroid-shine {
			top: -5rem;
			transform: rotate(35deg);
			background-color: transparent;
		}
	}

	#polaroid-shine {
		-webkit-pointer-events: none;
		position: absolute;
		top: -2rem;
		left: 0;
		transform: rotate(30deg);
		z-index: 1;
		filter: blur(0.25rem);
		transition: var(--transition-longer);
		background-color: rgb(255 255 255 / 0.3);
		width: 14rem;
		height: 8rem;
		pointer-events: none;
	}

	#polaroid-photo {
		display: block;
		position: relative;

		&::after {
			position: absolute;
			right: 0;
			bottom: -0.25rem;
			background-image: linear-gradient(
				to right,
				#ff6188,
				#fc9867,
				#ffd866,
				#a9dc76,
				#78dce8,
				#ab9df2
			);
			width: 3rem;
			height: 0.5rem;
			content: "";
		}

		#dejavu {
			display: block;
			transition: var(--transition-longer);
			width: 100%;
			height: 100%;

			#path4,
			#path13,
			#circle2948-7,
			#path8,
			#path11,
			#path12 {
				transform-origin: center;
				transition: var(--transition-longer);
			}

			&:hover {
				#path4 {
					transform: translateY(-2px);
				}

				#path13 {
					transform: translateY(-4px);
				}

				#circle2948-7 {
					transform: translateY(-6px);
				}

				#path8 {
					transform: translateY(-8px);
				}

				#path11 {
					transform: translateY(-10px);
				}

				#path12 {
					transform: translateY(-12px);
				}
			}

			&:active {
				#path4 {
					transform: rotate(-5deg) scale(0.75);
				}

				#path13 {
					transform: rotate(0deg) scale(1);
				}

				#circle2948-7 {
					transform: rotate(5deg) scale(1.25);
				}

				#path8 {
					transform: rotate(10deg) scale(1.5);
				}

				#path11 {
					transform: rotate(15deg) scale(1.75);
				}

				#path12 {
					transform: rotate(20deg) scale(2);
				}
			}
		}
	}

	#polaroid-title,
	#statuscafe-content,
	#statuscafe-link {
		display: block;
		color: rgb(0 0 0 / 0.8);
		line-height: 1;
		font-family: var(--font-monospace-code);
	}

	#polaroid-title {
		margin-block-start: 0.5rem;
		font-weight: bold;
		font-size: 0.5em;
		text-transform: uppercase;
	}

	#statuscafe-content {
		margin-block-start: 0.25rem;
		font-size: 0.5625rem;
	}

	#statuscafe-link {
		margin-block-start: 0.5rem;
		font-weight: normal;
		font-size: 0.5625rem;
		text-decoration: none;

		&::after {
			content: " →";
		}

		&:hover {
			text-decoration: underline;
			text-decoration-style: solid; // Make underline not wavy

			#statuscafe-face {
				filter: none;
			}
		}

		#statuscafe-face {
			float: inline-end;
			filter: var(--printed);
			transition: var(--transition);
			color: black;
			font-size: 1rem;
			line-height: 0; // Avoid the link becoming too high
		}
	}

	@media only screen and (max-width: 758px) {
		float: none;
		margin: 2rem auto 0;
	}
}

#abyss {
	filter: blur(0.25rem);
}

#celeste,
#teardown,
#superliminal,
#stardew,
#untitled,
#stanley {
	&:hover {
		list-style-type: none;
	}
}

#strawberry,
#hammer,
#pawn,
#chicken,
#goose,
#boss {
	display: block;
	position: absolute;
	top: 0.25rem;
	left: -1.1875rem;
	transform: scale(0.5);
	opacity: 0;
	transition: var(--transition);
	image-rendering: pixelated;
	width: 1rem;
	height: 1rem;
}

#celeste:hover #strawberry,
#teardown:hover #hammer,
#superliminal:hover #pawn,
#stardew:hover #chicken,
#untitled:hover #goose,
#stanley:hover #boss {
	transform: scale(1);
	opacity: 1;
}
/* ... */

